@@ -1,8 +1,8 @@
 Package: Nozzle.R1
 Type: Package
 Title: Nozzle Reports
-Version: 1.1-0
-Date: 2012-05-14
+Version: 1.1-1
+Date: 2012-05-15
 Author: Nils Gehlenborg <nils@hms.harvard.edu>
 Maintainer: Nils Gehlenborg <nils@hms.harvard.edu>
 Description: The Nozzle package provides an API to generate HTML
@@ -24,7 +24,7 @@ Copyright: Nozzle is copyright 2013 The Fellows and President of
         under the MIT license. Copyright 2008 Christian Bach.
 LazyLoad: yes
 Collate: 'nozzle.R'
-Packaged: 2013-05-14 17:53:36 UTC; nils
+Packaged: 2013-05-15 14:05:33 UTC; nils
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-05-14 21:33:57
+Date/Publication: 2013-05-15 19:25:56
