@@ -1,7 +1,7 @@
-c33907443961814bbacd88dc822c446f *DESCRIPTION
+9e0fd32101906fca15fb1ea6ed2e7965 *DESCRIPTION
 3dc48b2e0babaef4967da7d8246508fb *NAMESPACE
-fb5ae62d7d26007a8bb54327532eaa8f *NEWS
-c9f05326db9ec1c0f42cafa946c9f474 *R/nozzle.R
+805d6621a8e4c1d1f4bd236b381f776e *NEWS
+933a44d619ab910db76ff87905f02654 *R/nozzle.R
 5919cd29deed6c0b162ad8f8061ece30 *inst/css/nozzle.css
 3c92a37343a6f53ebf4a60b39f372deb *inst/css/nozzle.min.css
 e7c5fc6690e91fa663cd7047dbf0306f *inst/css/nozzle.print.css
